--- a/ms_tech/ms_tech.csproj
+++ b/ms_tech/ms_tech.csproj
@@ -168,7 +168,9 @@
     <Compile Include="Clases\FNC_iTextSharp.cs" />
     <Compile Include="Clases\MyFunctions.cs" />
     <Compile Include="Clases\PdfEventsGenerico.cs" />
+    <Compile Include="Clases\SQL.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
+    <Compile Include="Controllers\EstadisticasController.cs" />
     <Compile Include="Controllers\IncidentesController.cs" />
     <Compile Include="Controllers\ProblemasController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
@@ -192,6 +194,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CambiarPasswordViewModel.cs" />
+    <Compile Include="ViewModels\EstadisticasViewModel.cs" />
     <Compile Include="ViewModels\IncidentesViewModel.cs" />
     <Compile Include="ViewModels\SolucionesViewModel.cs" />
   </ItemGroup>
@@ -269,6 +272,7 @@
     <Content Include="Views\Incidentes\Edit.cshtml" />
     <Content Include="Views\Incidentes\Index.cshtml" />
     <Content Include="Views\Incidentes\EditarEstado.cshtml" />
+    <Content Include="Views\Estadisticas\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
