--- a/ms_tech_clientes/ms_tech_clientes.csproj
+++ b/ms_tech_clientes/ms_tech_clientes.csproj
@@ -65,11 +65,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ConsultaIncidentes.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Default.aspx" />
+    <Content Include="FinSession.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Incidente.aspx" />
@@ -89,9 +91,22 @@
     <Content Include="Scripts\jquery-2.1.3.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
+    <Compile Include="ConsultaIncidentes.aspx.cs">
+      <DependentUpon>ConsultaIncidentes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ConsultaIncidentes.aspx.designer.cs">
+      <DependentUpon>ConsultaIncidentes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FinSession.aspx.cs">
+      <DependentUpon>FinSession.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FinSession.aspx.designer.cs">
+      <DependentUpon>FinSession.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Sql1.cs" />
-    <Content Include="Incidentes.cs" />
-    <Content Include="Sql.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
