--- a/ms_tech/Web.config
+++ b/ms_tech/Web.config
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="data source=WINMAC;initial catalog=ms_tech;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="data source=nb-nico2\sqlexpress;initial catalog=ms_tech;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
-    <!--<add name="DefaultConnection" connectionString="data source=fzlxj4abni.database.windows.net;initial catalog=ms_tech;user id=nicograglia;password=mVick777;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="data source=NYC;initial catalog=ms_tech;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="data source=nb-nico2\sqlexpress;initial catalog=ms_tech;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
